--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Garvit Sharma profile picture" />
+        <img src="assets/profile-pic.png" alt="Garvit Sharma profile picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Garvit_s_Resume3.pdf')"
+            onclick="window.open('assets/Garvit_s_Resume3.pdf')"
           >
             Download Resume
           </button>
@@ -57,13 +57,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/garvitsharma1/'"
           />
           <img
-            src="./assets/github.png"
+            src="assets/github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/GarvitSharma0'"
@@ -79,7 +79,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/notebook.png"
+                src="assets/notebook.png"
                 alt="Notebook icon"
                 class="icon"
               />
@@ -88,7 +88,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="assets/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -97,7 +97,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -113,7 +113,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -170,7 +170,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -184,7 +184,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="assets/project-1.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -205,7 +205,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="assets/project-2.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -232,7 +232,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="assets/project-3.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -253,7 +253,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -265,7 +265,7 @@
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
-            src="./assets/email.png"
+            src="assets/email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
@@ -273,7 +273,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/linkedin.png"
+            src="assets/linkedin.png"
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
@@ -281,7 +281,7 @@
         </div>
         <div class="contact-info-container">
           <img
-            src="./assets/phone.png"
+            src="assets/phone.png"
             alt="Phone icon"
             class="icon contact-icon"
           />
