--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Tech. in Computer Science<br />Bennett University</p>
+              <p>
+                B.Tech. in Computer Science<br />Bennett University<br />CGPA: <b>8.61</b>
+              </p>
             </div>
           </div>
           <div class="text-container">
