--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('assets/Garvits_Resume.pdf')"
+            onclick="window.open("assets/Garvit's_Resume1.pdf")"
           >
             Resume
           </button>
